fix: changed margin in How Hammershift Works

--- a/src/app/styles/app.css
+++ b/src/app/styles/app.css
@@ -34,7 +34,7 @@
     font-weight: 700;
 }
 .btn-dark {
-    padding: 0.625rem 0.75rem;
+    padding: 24px 16px;
     color: white;
     background-color: #172431;
     border-radius: 0.25rem;
